# better-stats

./: .env.example  .gitignore  .impeccable.md  BETTERSTATS_BUILD.md  Cargo.toml  Dockerfile.api  Dockerfile.web  Dockerfile.worker  build.md  docker-compose.yml  keywords-agent.md  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.json
.github/workflows/: ci.yml
.sqlx/: query-0ffddf5125d540f9ae90ede23f57a24e7e0d30b8c4a3cd93e831b565b8d3f9bd.json  query-12f8f0004706df70813eddd5c6df1764416aff9baf4dcac8d84a2cd3c02a6060.json  query-1f4d2e068529f4f2597de3ad132507c07934a293412d1f86a6f940333560f5d2.json  query-42d478d8ed6bc194725649616dfb79405d7cba3740414fe9ab5943cecc368fcc.json  query-65931e45e9180daef8985464d524640a518550d270c42468639a4152322aacf1.json  query-84ec75feff28dd817b860518385cc94c18d7d796058603f6a9900266c12ffb84.json  query-87d9271f9ad4c06ea6d25996d4ba20d191e864b65aec06d56109cff396e606a5.json  query-98177464ae8ba9d5a0c9876c02fd0da2b1995b4b822557e9f89e0b5d9a206cd9.json  query-9c27039d8c30154615ecb485f2f91b4bdbc2f378bba7fce14e55ea951f0f8394.json  query-a346ca6057e769f6379847162c4b1d560ac6aa511b63d4a6b08c69e244a92ec7.json  query-aa1be9caed98a8c49b55cdf5cf128b3c1ce41952d073a06c21b1b1bd2cf00406.json  query-c433b9c693ca85fe4477c9d4d75c86471242753720de34af82dd454806f9b55e.json  query-ca8c902a35d02ea6772951f47faadc81086bddd9cf2b481ae0db2b00779bc1a5.json  query-ed2384fa7256a0a84070381fd9733255197b3692571e18ef05f0d17a7cbd56b1.json  query-ed30def843d2a430b187e94a735e2bb23e325f9d29e94aabd66d13f0385399cf.json  query-f7387530a324dd5bcc6bf14d2261ea88bb789de13f4ed097ee1f20e356c000cc.json
apps/api/: Cargo.toml  Dockerfile  package.json  railway.json
apps/api/src/: error.rs  main.rs  state.rs
apps/api/src/routes/: admin.rs  dashboard.rs  integrations.rs  mod.rs  sites.rs  webhooks.rs
apps/scanner/: Dockerfile  package.json  tsconfig.json  tsup.config.ts
apps/scanner/src/: detect.ts  index.ts  llm.ts
apps/snippet/: package.json  tsconfig.json
apps/snippet/src/: index.ts
apps/web/: Dockerfile  next.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
apps/web/public/: index.html
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/ai-traffic/: page.tsx
apps/web/src/app/(app)/ai-visibility/: page.tsx
apps/web/src/app/(app)/google-aio/: page.tsx
apps/web/src/app/(app)/keywords-research/: keywords-research-flow.tsx  page.tsx
apps/web/src/app/(app)/scans/: page.tsx
apps/web/src/app/(app)/scans/[id]/: page.tsx
apps/web/src/app/(app)/settings/brands/: page.tsx
apps/web/src/app/(app)/settings/models/: page.tsx
apps/web/src/app/api/brands/: route.ts
apps/web/src/app/api/dashboard/: route.ts
apps/web/src/app/api/prompts/: route.ts
apps/web/src/app/api/scans/: route.ts
apps/web/src/app/dashboard/: _OrgPicker.tsx  layout.tsx  page.tsx
apps/web/src/app/onboarding/: onboarding-flow.tsx  page.tsx
apps/web/src/components/: model-icon.tsx  nav.tsx  scan-drawer.tsx
apps/web/src/components/ui/: button.tsx  circular-progress.tsx  input.tsx  sparkline.tsx
apps/web/src/lib/: api.ts
crates/analytics/: Cargo.toml
crates/analytics/src/: aeo.rs  lib.rs  recommendations.rs
crates/db/: Cargo.toml
crates/db/src/: auth.rs  models.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: aeo.rs  ga4.rs  gsc.rs  lib.rs  token.rs
migrations/: 001_organisations.sql  clickhouse.sql
services/worker/: Cargo.toml  Dockerfile  package.json
services/worker/src/: main.rs
skills/: keywords-agent.md  seo-strategy-engine.md
(+14 files in other folders)
