[workspace]
members = [
    "apps/api",
    "services/worker",
    "crates/db",
    "crates/ingest",
    "crates/analytics",
]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
axum        = "0.7"
sqlx        = { version = "0.7", features = ["postgres", "uuid", "time", "runtime-tokio", "macros"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4", "serde"] }
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest     = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
dotenvy     = "0.15"
