[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
axum           = { workspace = true }
sqlx           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
uuid           = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
reqwest        = { workspace = true }
jsonwebtoken   = { workspace = true }
time           = { workspace = true }
tokio          = { workspace = true }
