[package]
name = "ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
reqwest    = { workspace = true }
sqlx       = { workspace = true }
oauth2     = { workspace = true }
aes-gcm    = { workspace = true }
base64     = { workspace = true }
db         = { path = "../db" }
